# mini-libs

./: CMakeLists.txt
include/: mini-adler32.h  mini-bmp.h  mini-deflate.h  mini-png.h  mini-zlib.h
test/: CMakeLists.txt  adler32.cpp  bmp.cpp  deflate.cpp  png.cpp  zlib.cpp
